--- a/app/shell/src/components/Wrapper/wrapper.scss
+++ b/app/shell/src/components/Wrapper/wrapper.scss
@@ -1,3 +1,18 @@
 .app-wrapper{
-    
+    display: flex;
+
+    .navBar-wrapper{
+        flex: 0 0 63px;
+        height: 100vh;
+        border-right: 1px solid rgb(230, 230, 230);
+    }
+
+    .body-right{
+        width: 100%;
+        .landing-page{
+            height: 97vh;
+            padding:0px 24px;
+            background-color: rgb(245, 245, 245);
+        }
+    }
 }
