--- a/app/shell/src/components/Navbar/navbar.scss
+++ b/app/shell/src/components/Navbar/navbar.scss
@@ -8,16 +8,17 @@
         flex: 0 0 80px;
         border-bottom: 1px solid rgb(230, 230, 230);
         padding: 12px;
+        text-decoration: none;
         .logo{
             width: 100%;
-            height: 40px;
-            background: url('../../assets/img/mf-logo.png') center no-repeat;
+            height: 40px;            
+            background: url('../../assets/img/webpack.png') center no-repeat;
             background-size: cover;
         }
         .title{
-            text-align: center;
             color: grey;
-            font-size: 0.75rem;
+            text-align: center;
+            font-size: 0.65rem;
             margin-top: 0.5rem;
         }
     }
