--- a/app/shell/src/components/Navbar/navbar.scss
+++ b/app/shell/src/components/Navbar/navbar.scss
@@ -26,8 +26,19 @@
         flex: 1 0 auto;
         display: flex;
         flex-direction: column;
+        align-items: center;
         border-bottom: 1px solid rgb(230, 230, 230);
         padding: 12px;
+        font-size: 20px;
+        a {
+            text-decoration: none;
+            color: grey;
+            margin: 6px 0px;
+
+            &:hover {
+                color: blue;
+            }
+        }
     }
     .nav-bottom{
         flex: 0 0 160px;
