Update style on whole right page

--- a/app/dashboard/src/components/MetricsBoard/metricsBoard.scss
+++ b/app/dashboard/src/components/MetricsBoard/metricsBoard.scss
@@ -2,7 +2,8 @@
     display: flex;
     flex-wrap: wrap;
     .chart {
-        flex: 0 0 48%;
+        flex: 0 0 49%;
         padding: 24px;
+        margin-bottom: 24px;
     }
 }
